Added a button to call PP2I in detailled_identity and a route
